--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <td><img src="images/jonathans.jpg" alt="Jonathan profile picture"></td>
                 <td>
                     <h1>Jonathan Davidson</h1>
-        <p><em>Founder and CTO of the<strong><a href="https://www.appbrewery.co/"> Gezzer Innovation Group</a> </strong>.</em></p>
+        <p><em>Founder and CTO of the<strong><a href="https://www.appbrewery.co/"> Geezzer Innovation Group</a> </strong>.</em></p>
         <p>I am an IOS and Web Developer. I ♥ coffee and make my own Whisky</p>
                 </td>
             </tr>
